# ShapeFitTool

./: .editorconfig  CMakeLists.txt  CMakeSettings.json
include/: line_fit.h
src/: line_fit.cpp  main.cpp  method_flann.cpp  method_getDistance.cpp  method_map.cpp
